<resources>
    <string name="app_name">MapExerciseArica</string>
    <string name="title_activity_maps">Map</string>
    <string name="delete_registry">borrar registros</string>
    <string name="show_on_map">Mostrar en mapa</string>
    <string name="name">Nombre</string>
    <string name="latitude">Latitud</string>
    <string name="longitude">Longitud</string>
    <string name="example_longitude">1999999999</string>
    <string name="example_latitude">1999999999</string>
    <string name="example_name">EL NOMBRE DE PRUEBA EQUIS DE</string>
</resources>